Project

General

Profile

Actions

Bug #20061

closed

rgw_file: attempt to unlink non-empty bucket could lead to hang

Added by Matt Benjamin almost 7 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
High
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel kraken
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

An early return in new unlink bucket num_entries check is
missing a conditional unlock and unref.


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #20138: jewel: rgw_file: attempt to unlink non-empty bucket could lead to hangResolvedNathan CutlerActions
Copied to rgw - Backport #20139: kraken: rgw_file: attempt to unlink non-empty bucket could lead to hangRejectedActions
Actions #1

Updated by Matt Benjamin almost 7 years ago

  • Status changed from In Progress to Pending Backport
Actions #2

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20138: jewel: rgw_file: attempt to unlink non-empty bucket could lead to hang added
Actions #3

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20139: kraken: rgw_file: attempt to unlink non-empty bucket could lead to hang added
Actions #4

Updated by Nathan Cutler over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF