rgw_file: release rgw_fh lock and ref on ENOTEMPTY

An early return in new unlink bucket num_entries check was
missing a conditional unlock and unref.

Fixes: http://tracker.ceph.com/issues/20061

Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>
(cherry picked from commit 51c25593dd741b4df2e839fcef82b143f8c8cfca)